Passed selectedObject also to detailNavigationController to get it for the seperateViewControllers delegate method in SplitViewController(Delegate). This way a reference can be made without making distinction whether selectedObject comes from tableView or CollectionView

--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBarController" id="49e-Tb-3d3" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -354,7 +354,7 @@
         <!--CocoaHeadsNL-->
         <scene sceneID="FD2-9x-qwk">
             <objects>
-                <tableViewController id="VPM-AS-eh9" customClass="MainViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="mainViewController" id="VPM-AS-eh9" customClass="MainViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="50n-PK-NSg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -396,7 +396,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You haven't selected anything yet." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uxi-Kq-FtF">
                                 <rect key="frame" x="169" y="289" width="263" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -434,7 +434,7 @@
         <!--Navigation Controller-->
         <scene sceneID="aIF-8q-dFu">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2rn-Ke-6oT" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="normalNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="2rn-Ke-6oT" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qrT-if-Njc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -456,6 +456,6 @@
         <image name="paper-map-7.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="gwb-vQ-0eO"/>
+        <segue reference="nrg-7f-M07"/>
     </inferredMetricsTieBreakers>
 </document>
