Changed files for web and website at Parse Hosting

--- a/CocoaHeadsNL/CloudCode/cloud/views/hello.ejs
+++ b/CocoaHeadsNL/CloudCode/cloud/views/hello.ejs
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title>CocoaheadsNL development environment</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>CocoaheadsNL</h1>
     <p><%= message %></p>
   </body>
 </html>
