--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D113c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="W81-50-NMJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="W81-50-NMJ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -423,7 +423,7 @@
         <!--Item-->
         <scene sceneID="znU-Wg-4fo">
             <objects>
-                <navigationController storyboardIdentifier="detailNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="L2c-H1-4Vt" customClass="DetailNavigationController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="detailNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="L2c-H1-4Vt" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="rba-ek-Jsd"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="meL-iC-aJY">
