--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -392,7 +392,7 @@
         <!--View Controller-->
         <scene sceneID="Qop-9C-NG0">
             <objects>
-                <viewController id="Jh2-FD-apv" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="normalViewController" id="Jh2-FD-apv" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ATm-h7-aLv"/>
                         <viewControllerLayoutGuide type="bottom" id="JW1-83-FKA"/>
