--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="W81-50-NMJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="W81-50-NMJ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -20,7 +20,6 @@
                         <segue destination="qKI-MW-cAT" kind="relationship" relationship="viewControllers" id="1Jl-KE-5Ju"/>
                         <segue destination="zNW-ht-Z05" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="4c9-e7-Scu" kind="relationship" relationship="viewControllers" id="Fxa-UT-fjq"/>
-                        <segue destination="M7Q-sU-WVM" kind="relationship" relationship="viewControllers" id="ODL-dM-KXy"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -30,7 +29,7 @@
         <!--LocationListViewController-->
         <scene sceneID="f38-qE-wNH">
             <objects>
-                <collectionViewController id="UVK-yH-wqA" userLabel="LocationListViewController" customClass="LocationListViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="locationListViewController" id="UVK-yH-wqA" userLabel="LocationListViewController" customClass="LocationListViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ze8-RZ-GD0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -299,42 +298,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B0A-m9-fy9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="882" y="-3329"/>
-        </scene>
-        <!--Apps-->
-        <scene sceneID="Add-fo-qP8">
-            <objects>
-                <tableViewController id="BYn-T7-W5R" customClass="AffiliateTableViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dXA-PS-Y5B">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="dataSource" destination="BYn-T7-W5R" id="qrj-KK-Dif"/>
-                            <outlet property="delegate" destination="BYn-T7-W5R" id="vEP-46-jMN"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Apps" id="WaN-qa-DY9"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="p4A-RD-vkl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="950" y="-911"/>
-        </scene>
-        <!--Apps-->
-        <scene sceneID="KI1-xr-ITl">
-            <objects>
-                <navigationController id="M7Q-sU-WVM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Apps" id="vg8-D1-Pev"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="H29-eK-XRs">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="BYn-T7-W5R" kind="relationship" relationship="rootViewController" id="2uU-Uo-JDN"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jfg-dV-aYK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="130" y="-911"/>
         </scene>
         <!--Companies-->
         <scene sceneID="mz1-im-VP7">
